# newgadk

./: .gitignore  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  pyproject.toml  verify.py
.github/workflows/: tests.yml
examples/: run_demo.py
src/ollama_swarm/: __init__.py  agents.py  assistant.py  backend.py  cli.py  config.py  dev_tools.py  memory.py  orchestrator.py  presets.py  quality_gates.py  router.py  scaffold.py  security_gates.py  tools.py  workspace.py
tests/: conftest.py  test_adversarial_cli.py  test_agents.py  test_assistant.py  test_assistant_e2e.py  test_dev_tools.py  test_memory.py  test_orchestrator.py  test_presets.py  test_quality_gates.py  test_router.py  test_scaffold.py  test_security_gates.py  test_tools.py
