[project]
name = "ollama-swarm"
version = "0.1.0"
description = "A reimagining of GADK's AI orchestration layer, built natively around Ollama."
requires-python = ">=3.11"
dependencies = ["ollama>=0.6"]

[project.scripts]
ollama-developer-assistant = "ollama_swarm.assistant:main"


[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
